# hse-lyceum-web-2025

./: .gitignore  README.md  package.json
.github/workflows/: deploy.yml
demo/: tcp-server-broadcast.cjs  udp-chat-client.cjs  udp-chat-server.cjs  udp-client.cjs
homework/: final-project-10-1.md  final-project-10-2.md  final-project-11.md  hw-10-1.md  hw-10-2.md  hw-11-1.md  hw-11-2.md
scripts/: buildSlides.sh
slides/: 10-1.md  10-10.md  10-11.md  10-12.md  10-13.md  10-14.md  10-15.md  10-2.md  10-3.md  10-4.md  10-5.md  10-6.md  10-7.md  10-8.md  10-9.md  11-1.md  11-10.md  11-11.md  11-12.md  11-13.md  11-2.md  11-3.md  11-4.md  11-5.md  11-6.md  11-7.md  11-8.md  11-9.md  _shared.md
slides/public/html/: animation.html  basic-page.html  challenge.html  grid-demo.html  html-form.html  position-absolute.html  (+8 more)
slides/styles/: index.ts
snippets/: custom-type-annotations.py  type-annotations.py
snippets/backend/code-quality/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
snippets/backend/code-quality/scripts/: script.sh
snippets/ci-cd-example/: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
snippets/modules/: main.py
snippets/python/: .gitignore  custom-type-annotations.py  ips-between.py
snippets/testing/: tdd-exercise.spec.js  unit-tests-exercise.js
snippets/testing/testing-example/backend/: main.py  pyproject.toml  test_main.py  todos.db
styles/: theme.css
website/: index.html  style.css  uno.config.ts  vite.config.ts
website/src/: main.ts  slides.ts
(+94 files in other folders)
